--- a/src/app/styles/header.module.css
+++ b/src/app/styles/header.module.css
@@ -27,7 +27,8 @@
   
   .auth a {
     margin-left: 1rem;
-    color: white;
+    margin-right: 5rem;
+    color: black;
     text-decoration: none;
     font-weight: 500;
   }
