Skeleton Pages for every directory
Added default pages for every planned links within directories.
Small changes to the main landing page to use specific CSS styles.

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -6,6 +6,6 @@ body {
 }
 
 .content {
-  padding-top: 70px; /* Adjust for fixed header */
-  min-height: 80vh; /* Push footer to bottom */
+  padding-top: 70px;
+  min-height: 80vh;
 }
